# chords

./: Cargo.toml  README.md
src/: attribute.rs  chord.rs  ffi.rs  json.rs  lib.rs  main.rs  note.rs  scale.rs  util.rs
src/chords/: chord.rs  scale.rs  util.rs
