[package]
name = "chords"
version = "0.2.1"
authors = ["antti l"]
description = "library for getting chords from scale"
repository="https://github.com/alamminsalo/chords"
keywords = ["notation", "music", "chords", "scales"]
license = "GPL-3.0"

[lib]
name = "chords"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "chords"
path = "src/main.rs"
doc = false

[dependencies]
serde_json = "1.0.0"
libc = "0.2.21"

