[package]
name = "chords"
version = "0.2.3"
authors = ["antti l"]
description = "library for getting chords from scale"
repository="https://github.com/alamminsalo/chords"
keywords = ["notation", "music", "chords", "scales"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "chords"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
serde_json = "1.0.0"
ordered-permutation = { git = "https://github.com/alamminsalo/ordered-permutation", version = "0.1.1"}
libc = {version = "0.2.5", optional= true }

[features]
default = []
ffi_c = ["libc"]

