[package]
name = "chords"
version = "0.2.7"
authors = ["alamminsalo"]
description = "library for getting chords from scale"
repository="https://github.com/alamminsalo/chords"
keywords = ["notation", "music", "chords", "scales"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "chords"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
serde_json = "1.0.0"
ordered-permutation = "0.1.1"
libc = {version = "0.2.5", optional= true }
serde_derive = "1.0.89"
serde = "1.0.89"

[features]
default = []
ffi_c = ["libc"]

